--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@angular/common": "~13.3.0",
     "@angular/compiler": "~13.3.0",
     "@angular/core": "~13.3.0",
+    "@angular/flex-layout": "13.0.0-beta.36",
     "@angular/forms": "~13.3.0",
     "@angular/material": "^13.3.0",
     "@angular/platform-browser": "~13.3.0",
@@ -22,6 +23,7 @@
     "@angular/router": "~13.3.0",
     "jspdf": "^2.5.1",
     "rxjs": "~7.5.0",
+    "tic-tac-toe-minimax": "1.0.8",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
