--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "myapp",
+  "name": "quran",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve --open --host 0.0.0.0 --port 8080 --disable-host-check",
     "build": "ng build",
+    "deploy": "scp -r dist/myapp/* ufopilot@192.168.0.56:/var/www/html/",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
